* Add: requiredClaims list for IssuerProperties. * Update: README.md with required_claims. * Add: IssuerConfiguration populated with requiredClaims * Improve: Take care of exception trowed and error message. * Add: Required claims copy to default claims. * Update: Tests, Check if requiredClaims is set in IssuerConfiguration.  Added additional claims to signedJWT. Test if exception is thrown when provided claim is not present in token. Updated other tests for new changes to signatures.